<resources>
    <string name="app_name">Phonary</string>
    <string name="title_activity_thai">Thai</string>
    <string name="splash_text">Tokyo Tech SDP 2021 - Team 9</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_show_oral_movement">ShowOralMovement</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_practice">PracticeActivity</string>

    <string name="start_recording">Start Record</string>
    <string name="stop_recording">Stop Record</string>
    <string name="play_recording">Start Replay</string>
    <string name="stop_playing">Stop Replay</string>
    <string name="initialStatus">Record your pronunciation!</string>

</resources>