<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    android:padding="@dimen/box_inset_layout_padding"
    tools:context=".ShowOralMovement">

    <RelativeLayout
        android:id="@+id/group_upper"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:id="@+id/tv_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_centerHorizontal="true"
            style="@style/TextView_ColoredBackground"
            android:textSize="40dp"
            android:text="Practice vowel"
            android:textStyle="bold"/>

        <ImageView
            android:id="@+id/img_flag"
            android:layout_below="@id/tv_type"
            android:layout_centerHorizontal="true"
            android:layout_width="@dimen/flagSize_ShowMouth"
            android:layout_height="@dimen/flagSize_ShowMouth"
            android:src="@drawable/ic_thailand"/>

        <LinearLayout
            android:id="@+id/group_tv_show"
            android:layout_below="@id/img_flag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/tv_letter_display"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                style="@style/TextView_ColoredBackground"
                android:textSize="@dimen/textSize_ShowMouth"
                android:text="A"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_pronun_display"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                style="@style/TextView_ColoredBackground"
                android:textSize="@dimen/textSize_ShowPronun"
                android:text="/ei/"
                android:textStyle="bold" />

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/group_middle"
        android:layout_below="@+id/group_upper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:id="@+id/tv_Status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/initialStatus"
            style="@style/TextView_ColoredBackground"
            android:textSize="16dp" />

        <com.john.waveview.WaveView
            android:id="@+id/waveView"
            android:layout_below="@+id/tv_Status"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@color/design_default_color_primary"
            app:above_wave_color="#fff"
            app:blow_wave_color="#fff"
            app:wave_height="large"
            app:wave_length="large"
            app:wave_hz="fast" >
        </com.john.waveview.WaveView>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_below="@id/waveView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:weightSum="4">

            <android.widget.Button
                android:id="@+id/btnStartRecord"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                style="@style/ButtonView_Function"
                android:text="@string/start_recording" />

            <android.widget.Button
                android:id="@+id/btnStopRecord"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                style="@style/ButtonView_Function"
                android:text="@string/stop_recording" />

            <android.widget.Button
                android:id="@+id/btnStartReplay"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                style="@style/ButtonView_Function"
                android:text="@string/play_recording" />

            <android.widget.Button
                android:id="@+id/btnStopReplay"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                style="@style/ButtonView_Function"
                android:text="@string/stop_playing" />

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/group_lower"
        android:layout_below="@+id/group_middle"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="60dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <TextView
            android:id="@+id/tv_Analyze"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="90% compared to native speech!"
            style="@style/TextView_ColoredBackground"
            android:visibility="invisible"
            android:textSize="20dp" />

        <VideoView
            android:id="@+id/vid_realRecord"
            android:layout_below="@id/tv_Analyze"
            android:layout_width="match_parent"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_height="@dimen/video_height" />

    </RelativeLayout>

    <android.widget.Button
        android:id="@+id/btnBack"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Go Back"
        style="@style/ButtonView_Function" />

</RelativeLayout>